# calculadora-estadistica

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  resources.qrc  resources_rc.py
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
assets/templates/: resultado_dispersion.md.j2  resultado_frecuencias.md.j2
controllers/: CalculadoraController.py  DispersionController.py  HistoryController.py  MarkdownController.py
deployment/: AppRun  io.github.4l3j0Ok.calculadora-estadistica.desktop  io.github.4l3j0Ok.calculadora-estadistica.metainfo.xml
qml/: AcercaPage.qml  DispersionPage.qml  FormulasPage.qml  FrecuenciasPage.qml  Main.qml
qml/components/: DispersionTable.qml  HistoryTable.qml  IconLabel.qml  NativeMarkdownView.qml  NavBar.qml  SlideText.qml  Table.qml  qmldir
schemas/: table.py
scripts/: build-linux.sh  build-windows.ps1
services/: calculator.py  descriptive_stats.py  formula_renderer.py  history_service.py  markdown_io.py  markdown_renderer.py  parser.py  runtime_paths.py  template_loader.py
src/: main.py  resources.qrc  resources_rc.py
src/assets/docs/: formulas.md
src/assets/templates/: agrupados_intervalos.md.j2  agrupados_valor.md.j2  no_agrupados.md.j2
src/controllers/: CalculadoraController.py  DispersionController.py  HistoryController.py  MarkdownController.py
src/qml/: AcercaPage.qml  DispersionPage.qml  FormulasPage.qml  FrecuenciasPage.qml  Main.qml
src/qml/components/: DispersionTable.qml  Input.qml  ResultCard.qml  Table.qml  Theme.qml  Toast.qml
src/schemas/: dispersion.py  history.py
src/services/: calculator.py  formula_renderer.py  history_service.py  markdown_io.py  markdown_renderer.py  parser.py  runtime_paths.py  template_loader.py
tests/: test_descriptive_stats.py  test_history_service_integration.py  test_markdown_io.py  test_markdown_renderer.py  test_runtime_paths.py
