[project]
name = "02-calculadora-p-y-e"
version = "1.6.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.11.0",
    "mdit-py-plugins>=0.4.1",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "ordered-set>=4.1.0",
    "zstandard>=0.25.0",
    "pytest>=8.0.0",
]

# Configuración de Nuitka. Ver scripts/build-linux.sh y
# scripts/build-windows.ps1. Las opciones condicionales por OS (icono,
# console-mode) se pasan en los scripts de build, ya que TOML no soporta
# `if {OS}` como las directivas `# nuitka-project-if:`. Las rutas de
# data files/dirs son relativas al CWD al invocar Nuitka, que en los
# scripts siempre es la raíz del repo.
[tool.nuitka]
mode = "standalone"
enable-plugin = "pyside6"
assume-yes-for-downloads = true
remove-output = true
report = "nuitka-report.xml"

# Plugins Qt: incluye los módulos QML runtime (QtQuick, QtQuick.Controls,
# QtQuick.Layouts, etc.) y parchea el rpath de sus plugins. Se excluye
# `Qt/labs/assetdownloader` que en algunas wheels trae artefactos de
# build sueltos (.a/.o) que rompen patchelf (no se usa esa API QML).
include-qt-plugins = "qml"
noinclude-dlls = ["PySide6/qml/Qt/labs/assetdownloader/*"]

# matplotlib: el visor Markdown usa mathtext para rasterizar fórmulas
# LaTeX (ver src/services/formula_renderer.py); embebemos su data para
# que funcione en el standalone.
include-package-data = ["matplotlib"]
include-module = ["matplotlib.backends.backend_agg"]

# Recursos junto al ejecutable. Las fuentes viven en `src/` (todo el
# código y recursos de la app viven en `src/`); Nuitka los copia al
# directorio del ejecutable con los nombres que el resto del código
# espera vía `app_base_dir()` / `:/assets/...`.
#   - src/qml          → ./qml      (cargado por QQmlApplicationEngine)
#   - src/assets       → ./assets   (íconos, SVG, plantillas Jinja2,
#                                   formulas.md, fallback filesystem
#                                   usado por `template_loader.py`)
# `pyproject.toml` vive en la raíz del repo (lo lee `uv`); en el
# standalone se copia junto al ejecutable para que
# `src/services/runtime_paths.app_version()` lo encuentre.
include-data-files = ["pyproject.toml=pyproject.toml"]
include-data-dir = ["src/qml=qml", "src/assets=assets"]
