[project]
name = "02-calculadora-p-y-e"
version = "1.10.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.11.0",
    "mdit-py-plugins>=0.4.1",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "nuitka>=4.1.3",
    "ordered-set>=4.1.0",
    "zstandard>=0.25.0",
    "pytest>=8.0.0",
]
